--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "acol-bridge",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -9,6 +10,7 @@
     "firebase": "^10.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-router-dom": "^6.22.1",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
